--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-
+    <link rel="icon" href="favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#0f172a" />
     <link rel="manifest" href="manifest.json" />
     <title>Geo Recorder</title>
@@ -67,6 +68,10 @@
     <!-- Toast Notification -->
     <div id="toast" class="fixed bottom-4 left-1/2 transform -translate-x-1/2 bg-green-600 text-white px-4 py-2 rounded shadow-lg">
       Coordinates saved!
+    </div>
+
+    <div class="absolute bottom-4 right-4">
+      v1.2.2
     </div>
 
     <script>
