--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <link rel="icon" href="favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#0f172a" />
+    <link rel="manifest" href="manifest.json" />
+    <title>Geo Recorder</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" class="bg-slate-900 text-white min-h-screen">
+		<div style="display: contents" class="flex flex-col">%sveltekit.body%</div>
 	</body>
 </html>
