--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,8 @@
     <link rel="manifest" href="manifest.json" />
     <title>Geo Recorder</title>
 		%sveltekit.head%
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" />
+
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-slate-900 text-white min-h-screen">
 		<div style="display: contents" class="flex flex-col">%sveltekit.body%</div>
