--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <link rel="icon" href="favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#0f172a" />
     <link rel="manifest" href="manifest.json" />
     <title>Geo Recorder</title>
