fixed list and added db

--- a/src/app.html
+++ b/src/app.html
@@ -7,9 +7,9 @@
     <link rel="icon" href="/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#0f172a" />
     <link rel="manifest" href="manifest.json" />
-    <title>Geo Recorder</title>
+    <title>VP Pro</title>
 		%sveltekit.head%
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon=close&icon=arrow_back&icon=sort" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon=close&icon=arrow_back&icon=sort&icon=search&icon=add&icon=check" />
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-slate-900 text-white min-h-screen">
 		<div style="display: contents" class="flex flex-col">%sveltekit.body%</div>
