--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
     <link rel="icon" href="/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#0f172a" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <title>VP Pro</title>
 		%sveltekit.head%
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon=close&icon=arrow_back&icon=sort&icon=search&icon=add&icon=check" />
