--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,36 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <link rel="icon" href="/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <link
+      rel="icon"
+      href="/favicon-light.png"
+      type="image/png"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      href="/favicon-dark.png"
+      type="image/png"
+      media="(prefers-color-scheme: dark)"
+    />
     <meta name="theme-color" content="#0f172a" />
     <link rel="manifest" href="/manifest.json" />
     <title>VP Pro</title>
-		%sveltekit.head%
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon=close&icon=arrow_back&icon=sort&icon=search&icon=add&icon=check&icon=schedule" />
-	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-slate-900 text-white min-h-screen">
-		<div style="display: contents" class="flex flex-col">%sveltekit.body%</div>
-	</body>
+    %sveltekit.head%
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon=close&icon=arrow_back&icon=sort&icon=search&icon=add&icon=check&icon=schedule"
+    />
+  </head>
+  <body
+    data-sveltekit-preload-data="hover"
+    class="bg-slate-900 text-white min-h-screen"
+  >
+    <div style="display: contents" class="flex flex-col">%sveltekit.body%</div>
+  </body>
 </html>
