--- a/src/app.html
+++ b/src/app.html
@@ -22,9 +22,10 @@
     <link rel="manifest" href="/manifest.json" />
     <title>VP Pro</title>
     %sveltekit.head%
+    <!-- The icon names below must in alphabetical order -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon=close&icon=arrow_back&icon=sort&icon=search&icon=add&icon=check&icon=schedule"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close,map,pin_drop,search,sort"
     />
   </head>
   <body
