added map component

--- a/src/app.html
+++ b/src/app.html
@@ -25,7 +25,7 @@
     <!-- The icon names below must in alphabetical order -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close,map,pin_drop,search,sort"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add,arrow_back,close,map,pin_drop,search,sort"
     />
   </head>
   <body
